--- a/microservicecloud-config-dept-client.yml
+++ b/microservicecloud-config-dept-client.yml
@@ -11,10 +11,10 @@ spring:
     name: microservicecloud-config-dept-client
    datasource:
     type: com.alibaba.druid.pool.DruidDataSource
-    driver-class-name: org.gjt.mm.mysql.Driver
-    url: jdbc:mysql://localhost:3306/cloudDB01
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://localhost:3306/clouddb01?serverTimezone=UTC
     username: root
-    password: 123456
+    password: 654321
     dbcp2:
       min-idle: 5
       initial-size: 5
@@ -22,7 +22,7 @@ spring:
       max-wait-millis: 200 
 mybatis:
   config-location: classpath:mybatis/mybatis.cfg.xml
-  type-aliases-package: com.atguigu.springcloud.entities
+  type-aliases-package: com.xawl.springcloud.entities
   mapper-locations:
   - classpath:mybatis/mapper/**/*.xml
  
@@ -35,8 +35,8 @@ eureka:
     prefer-ip-address: true
  
 info:
-  app.name: atguigu-microservicecloud-springcloudconfig01
-  company.name: www.atguigu.com
+  app.name: mxd-microservicecloud-springcloudconfig01
+  company.name: www.mxd.com
   build.artifactId: $project.artifactId$
   build.version: $project.version$
 ---
@@ -48,10 +48,10 @@ spring:
     name: microservicecloud-config-dept-client
    datasource:
     type: com.alibaba.druid.pool.DruidDataSource
-    driver-class-name: org.gjt.mm.mysql.Driver
-    url: jdbc:mysql://localhost:3306/cloudDB02
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://localhost:3306/clouddb02?serverTimezone=UTC
     username: root
-    password: 123456
+    password: 654321
     dbcp2:
       min-idle: 5
       initial-size: 5
@@ -61,7 +61,7 @@ spring:
   
 mybatis:
   config-location: classpath:mybatis/mybatis.cfg.xml
-  type-aliases-package: com.atguigu.springcloud.entities
+  type-aliases-package: com.xawl.springcloud.entities
   mapper-locations:
   - classpath:mybatis/mapper/**/*.xml
  
@@ -74,7 +74,7 @@ eureka:
     prefer-ip-address: true
  
 info:
-  app.name: atguigu-microservicecloud-springcloudconfig02
-  company.name: www.atguigu.com
+  app.name: mxd-microservicecloud-springcloudconfig02
+  company.name: www.mxd.com
   build.artifactId: $project.artifactId$
   build.version: $project.version$
